--- a/app/views/manuals/_form.html.haml
+++ b/app/views/manuals/_form.html.haml
@@ -1,8 +1,16 @@
-= simple_form_for @manual, :html => { :class => 'form-horizontal' } do |f|
+= simple_nested_form_for @manual, :html => { :class => 'form-horizontal' } do |f|
   = f.input :title
   = f.input :body
-  = f.input :publish_data
+  = f.input :publish_date
   = f.association :categories, :as => :check_boxes
+  
+  /= f.fields_for :steps do |ff|
+  /  = ff.text_field :text
+  
+  = f.fields_for :steps, :wrapper => false do |b|
+    = render 'step', f: b 
+    
+  = f.link_to_add "Add a step", :steps, :data => {:target => "#steps"}
   .form-actions
     = f.button :submit, :class => 'btn-primary'
     = link_to t('.cancel', :default => t("helpers.links.cancel")), manuals_path, :class => 'btn'
