--- a/app/views/manuals/show.html.haml
+++ b/app/views/manuals/show.html.haml
@@ -35,3 +35,36 @@
   = link_to t('.back', :default => t("helpers.links.back")), manuals_path, :class => 'btn'
   = link_to t('.edit', :default => t("helpers.links.edit")), edit_manual_path(@manual), :class => 'btn'
   = link_to t('.destroy', :default => t("helpers.links.destroy")), manual_path(@manual), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
+  
+#disqus_thread
+:javascript
+  /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+  var disqus_shortname = 'cookquery'; // required: replace example with your forum shortname
+  var disqus_developer = 1;
+
+  /* * * DON'T EDIT BELOW THIS LINE * * */
+  
+  (function() {
+      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+      dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+  })();
+  
+  (function () {
+    var s = document.createElement('script'); s.async = true;
+    s.type = 'text/javascript';
+    s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+    (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+  }());
+%noscript
+  Please enable JavaScript to view the
+  %a{:href => "http://disqus.com/?ref_noscript"} comments powered by Disqus.
+
+%a{:href => "#disqus_thread"} Link
+%br
+%a.dsq-brlink{:href => "http://disqus.com"}
+  comments powered by
+  %span.logo-disqus Disqus
+  
+  
+
