--- a/app/views/manuals/_step.html.haml
+++ b/app/views/manuals/_step.html.haml
@@ -2,3 +2,6 @@
   = f.text_field :text
   = f.file_field :image 
   = f.link_to_remove "Remove this step"
+  - if f.object.image.exists?
+    = image_tag(f.object.image.url(:thumb))
+  %br
