--- a/app/views/manuals/_form.html.haml
+++ b/app/views/manuals/_form.html.haml
@@ -7,7 +7,8 @@
   = f.input :kcal
   = f.input :quantity
   = f.input :difficulty
-  = f.file_field :image
+  %div.fileholder
+    = f.file_field :image
   
   %div#main-photo
   
