--- a/app/assets/stylesheets/account.css.scss
+++ b/app/assets/stylesheets/account.css.scss
@@ -35,7 +35,7 @@ body {
 				min-width: 30px;
 				line-height: 30px;
 			}
-			#prependedInput {
+			.prependedInput {
 				width: 265px;
 				height: 30px;
 			}
