--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,10 +1,39 @@
-%h2 Sign up
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f|
-  = f.error_notification
-  = display_base_errors resource
-  = f.input :name, :autofocus => true
-  = f.input :email, :required => true
-  = f.input :password, :required => true
-  = f.input :password_confirmation, :required => true
-  = f.button :submit, 'Sign up', :class => 'btn-primary'
-= render "devise/shared/links"
+/
+  %h2 Sign up
+  = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f|
+    = f.error_notification
+    = display_base_errors resource
+    = f.input :name, :autofocus => true
+    = f.input :email, :required => true
+    = f.input :password, :required => true
+    = f.input :password_confirmation, :required => true
+    = f.button :submit, 'Sign up', :class => 'btn-primary'
+  = render "devise/shared/links"
+
+.wrapper
+  #login
+    .logo
+      =image_tag("logo-login.png")
+    /%form
+    = simple_form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f|
+      .input-prepend
+        %span.add-on
+          %label.fontawesome-user{:for => 'user_name'}
+        = f.text_field :name, :autofocus => true, class: 'prependedInput', placeholder: '稱呼', label: false
+      .input-prepend
+        %span.add-on
+          %label.fontawesome-envelope{:for => 'user_email'}
+        = f.text_field :email, :autofocus => true, class: 'prependedInput', placeholder: '電郵', label: false
+      .input-prepend
+        %span.add-on
+          %label.fontawesome-key{:for => 'user_password'}
+        = f.text_field :password, :autofocus => true, class: 'prependedInput', placeholder: '密碼', label: false
+      .input-prepend
+        %span.add-on
+          %label.fontawesome-key{:for => 'user_password_confirmation'}
+        = f.text_field :password_confirmation, :autofocus => true, class: 'prependedInput', placeholder: '確認密碼', label: false
+      :markdown
+          輸入以上的資料，輕輕鬆鬆註冊，當點擊註冊時即等同於同意 [Cookquery Terms](http://ruby-lang.org) .
+      %hr
+      %button.btn.btn-primary.btn-large.btn-block{:type => "submit"} 
+        %b 立即註冊
